--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <header>
         <h1>Aqui irá el titulo</h1>
         <nav>
-            <a href="#">enlace1</a>
-            <a href="#">enlace2</a>
-            <a href="#">enlace3</a>
-            <a href="#">enlace4</a>
-            <a href="#">enlace5</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Productos</a>
+            <a href="#">Blog</a>
+            <a href="#">Contacta con nostros</a>
+            <a href="#">Registro</a>
         </nav>
     </header>
 </body>
