Se añade css al proyecto

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base navegación</title>
+    <link rel="stylesheet" href="Css/style.css" >
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Aqui irá el titulo</h1>
-        <nav>
+        <nav class="barra_navegacion">
             <a href="#">Nosotros</a>
             <a href="#">Productos</a>
             <a href="#">Blog</a>
