Cambio nombre funcion bgGreen a bgChange

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script text="java/javascript">
         var botonTema;
         var estado = "original";
-        function bgGreen() {
+        function bgChange() {
             botonTema = document.querySelector("body");
             if (estado === "original") {
                 // Cambiar color
@@ -34,7 +34,7 @@
         <div class="titulo">
             <h1>Aqui irá el titulo</h1>
             <div class="tema">
-                <button onclick="bgGreen()">Tema</button>
+                <button onclick="bgChange()">Tema</button>
             </div>
         </div>
         <nav class="barra_navegacion">
